--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template-tailwindcss": "4.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -21,9 +22,11 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "web-vitals": "^4.2.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
